--- a/exercicíos/Módulo 3/ex001/fundo006.html
+++ b/exercicíos/Módulo 3/ex001/fundo006.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo</title>
     <style>
         body{
             height: 100vh;
-            background-color: #000;
+            /*background-color: #000;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*
+               shorthand - background
+
+            color > image > position > repeat > [size] > attachment
+            
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat  fixed;
+            background-size: cover;
+
+
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +41,10 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam numquam labore quo quisquam optio tempore sequi, eum quasi aliquam fugiat unde nam, est quae nisi rerum! Minus aliquam quidem eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed reiciendis omnis sint autem dolor beatae laborum amet labore cumque ipsam, nobis quasi, aliquam fuga repellat vel nam veritatis ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis molestiae impedit ipsam? Adipisci quibusdam repellendus impedit eveniet consectetur exercitationem reprehenderit, quos culpa voluptates! Nemo nulla eveniet asperiores fuga ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam numquam labore quo quisquam optio tempore sequi, eum quasi aliquam fugiat unde nam, est quae nisi rerum! Minus aliquam quidem eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed reiciendis omnis sint autem dolor beatae laborum amet labore cumque ipsam, nobis quasi, aliquam fuga repellat vel nam veritatis ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis molestiae impedit ipsam? Adipisci quibusdam repellendus impedit eveniet consectetur exercitationem reprehenderit, quos culpa voluptates! Nemo nulla eveniet asperiores fuga ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam numquam labore quo quisquam optio tempore sequi, eum quasi aliquam fugiat unde nam, est quae nisi rerum! Minus aliquam quidem eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed reiciendis omnis sint autem dolor beatae laborum amet labore cumque ipsam, nobis quasi, aliquam fuga repellat vel nam veritatis ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis molestiae impedit ipsam? Adipisci quibusdam repellendus impedit eveniet consectetur exercitationem reprehenderit, quos culpa voluptates! Nemo nulla eveniet asperiores fuga ratione.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam numquam labore quo quisquam optio tempore sequi, eum quasi aliquam fugiat unde nam, est quae nisi rerum! Minus aliquam quidem eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed reiciendis omnis sint autem dolor beatae laborum amet labore cumque ipsam, nobis quasi, aliquam fuga repellat vel nam veritatis ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis molestiae impedit ipsam? Adipisci quibusdam repellendus impedit eveniet consectetur exercitationem reprehenderit, quos culpa voluptates! Nemo nulla eveniet asperiores fuga ratione.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam numquam labore quo quisquam optio tempore sequi, eum quasi aliquam fugiat unde nam, est quae nisi rerum! Minus aliquam quidem eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed reiciendis omnis sint autem dolor beatae laborum amet labore cumque ipsam, nobis quasi, aliquam fuga repellat vel nam veritatis ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit veritatis molestiae impedit ipsam? Adipisci quibusdam repellendus impedit eveniet consectetur exercitationem reprehenderit, quos culpa voluptates! Nemo nulla eveniet asperiores fuga ratione.</p>
     </main>
 </body>
