--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-        Por Milton Duarte
-        [SITE: https://www.recantodasletras.com.br/poesias/3186743]
+        <h1>Cordel Moderno</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        
     </header>
 
     Estou ficando cansado
@@ -78,7 +78,7 @@
     Deixe que Deus interprete.
 
     <footer>
-        <p>Site criado por Hernani Lenc</p>
+        <p>Site criado por <a href="https://www.instagram.com/hernanydosanjos/" target="_blank">Hernani Lenço</a> para o curso em video</p>
     </footer>
 </body>
 </html>
