--- a/exercicíos/Módulo 3/ex002/tabela001.html
+++ b/exercicíos/Módulo 3/ex002/tabela001.html
@@ -33,7 +33,7 @@
                 table data = dados da tabela
     -->
     <table>
-        <tr>
+        <tr> <!-- Primeira Linha -->
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
