--- a/exercicíos/Módulo 3/ex002/tabela002.html
+++ b/exercicíos/Módulo 3/ex002/tabela002.html
@@ -7,13 +7,12 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            display: grid;
-            place-items: center;
         }
 
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td,th{
@@ -33,6 +32,12 @@
         tfoot{
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         tbody > tr:nth-child(odd){
